<resources>
    <string name="app_name">Proyecto</string>
    <string name="logTxtCorreo">Correo Electronico</string>
    <string name="logBtnIngresar">Ingresar</string>
    <string name="logTxtClave">Contraseña</string>
    <string name="logBtnSalir">Salir</string>
    <string name="logChkRecordar">Recordar Sesion</string>
    <string name="logLblRegistrar">Registrarse</string>
    <string name="logLblCopyright">TrustTech 2023</string>
    <string name="bieLblNombre">Bienvenido </string>
    <string name="frgCfgBtnCerrarSesion">Cerrar Sesion</string>
    <string name="logLblRecuperarContraseña">Has olvidado tu contraseña?</string>

    <!-- Bienvenida -->

    <string name="logTxtBuscar">Buscar</string>

    <!-- Registro -->
    <string name="regLblTitulo">Registro</string>
    <string name="regTxtDNI">DNI</string>
    <string name="RegTxtNombre">Nombres</string>
    <string name="regTxtApellidos">Apellidos</string>
    <string name="txtRegFechaNac">Fecha Nacimiento</string>
    <string name="regRabSinDefinir">Sin Definir</string>
    <string name="regRabMasculino">Masculino</string>
    <string name="regRabFemenino">Femenino</string>
    <string name="regTxtCorreo">Correo</string>
    <string name="regTxtClave">Clave</string>
    <string name="regChkTerminos">Términos y condiciones</string>
    <string name="regBtnRegistrar">Registrar</string>
    <string name="regBtnCancelar">Cancelar</string>


    <!-- Para el subtitulo de Informacion de cuenta -->

    <string name="frgCfgLblInformaciondelaCuenta">Modo administrador</string>
    <string name="frgCfgBtnAdministracionCuenta">Administracion de la cuenta</string>
    <string name="frgCfgBtnNotificaciones">Notificaciones</string>
    <string name="frgCfgBtnPrivacidadDatos">Privacidad de Datos</string>
    <string name="frgCfgBtnSeguridadSesion">Seguridad e Inicio de Sesion</string>
    <!-- Para el subtitulo de Acciones -->
    <string name="frgCfgLblAcciones">Acciones</string>
    <string name="frgCfgBtnAgregarCuenta">Agregar Cuenta</string>

    <!-- Para el subtitulo de Soporte -->
    <string name="frgCfgLblSoporte">Soporte</string>
    <string name="frgCfgBtnObtenerAyuda">Obtener Ayuda</string>
    <string name="frgCfgBtnCondiciones">Condiciones del Servicio</string>
    <string name="frgCfgBtnPolitica">Politica de Privacidad</string>

    <!-- Para el subtitulo de Ubicanos -->
    <string name="frgUbcLblMetodos">Metodos</string>
    <string name="frgUbcBtnContacto">Contactanos</string>
    <string name="frgUbcBtnAvanzado">Avanzado</string>
    <string name="frgUbcBtnParametros">Parametros</string>
    <string name="frgUbcBtnNavegador">Navegador Web</string>
    <string name="frgUbcBtnSeguimiento">Seguimiento</string>

    <!-- CARRO -->
    <string name="lbl_titulo">Partes de computadora</string>
    <string name="lbl_marca">Marca</string>
    <string name="lbl_modelo">Modelo</string>
    <string name="lbl_placa">Codigo</string>
    <string name="lbl_precio">Precio</string>
    <string name="agr_btn_elegir">Elegir ... </string>
    <string name="agr_btn_registrar">Registrar</string>
    <string name="agr_btn_mostrar">Mostrar</string>
    <string name="edi_btn_actualizar">Actualizar</string>
    <string name="edi_btn_eliminar">Eliminar</string>
    <string name="edi_btn_regresar">Regresar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Strings used for fragments for navigation -->

</resources>