<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.AgregarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_titulo"
            android:textColor="#FF1100"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="26sp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/agr_txt_marca"
                android:layout_width="800px"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15px"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_marca"
                android:maxLength="50" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/agr_txt_modelo"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:maxLength="50"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_modelo" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/agr_txt_placa"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:maxLength="7"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_placa" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="800px"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <EditText
                android:id="@+id/agr_txt_precio"
                android:layout_marginLeft="15px"
                android:layout_width="800px"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:layout_marginBottom="10dp"
                android:hint="@string/lbl_precio" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/agr_iv_foto_auto"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher">
            </ImageView>
            <Button
                android:layout_gravity="center"
                android:id="@+id/agr_btn_elegir"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:text="@string/agr_btn_elegir">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/agr_btn_registrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:text="@string/agr_btn_registrar">
            </Button>
            <Button
                android:id="@+id/agr_btn_mostrar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/agr_btn_mostrar">
            </Button>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>