<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".actividades.EditarActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/edi_iv_foto_auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@mipmap/ic_launcher"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_marca"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edi_txt_marca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:layout_weight="1"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_modelo"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edi_txt_modelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:layout_weight="1"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_placa"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edi_txt_placa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="7"
                android:layout_weight="1"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_precio"
                android:layout_weight="1"
                android:textColor="#000"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edi_txt_precio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/edi_btn_actualizar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginRight="20dp"
                android:textSize="20sp"
                android:text="@string/edi_btn_actualizar">
            </Button>
            <Button
                android:id="@+id/edi_btn_eliminar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:layout_marginLeft="20dp"
                android:textSize="20sp"
                android:text="@string/edi_btn_eliminar">
            </Button>
        </LinearLayout>
        <Button
            android:id="@+id/edi_btn_regresar"
            android:layout_width="150dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:text="@string/edi_btn_regresar">
        </Button>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>